feat(admin): implement posts sorting and filtering (#236)
* feat(admin): implement posts sorting and filtering

* fix(api): lint errors
